@startuml

title __APPFRAGMENTS's Class Diagram__\n

  namespace com.jxust.tutor {
    namespace appFragments {
      class com.jxust.tutor.appFragments.SessionItemFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.jxust.tutor {
    namespace appFragments {
      class com.jxust.tutor.appFragments.SessionLocationFragment {
          {static} ~ LOCATION_ID : int
          - address : String
          - cursor : Cursor
          - locationId : String
          - mMap : GoogleMap
          + getMarkerIcon()
          + onCreateView()
          + onMapReady()
          - setAddress()
          - setUpMap()
      }
    }
  }
  

  com.jxust.tutor.appFragments.SessionItemFragment -up-|> android.support.v4.app.Fragment
  com.jxust.tutor.appFragments.SessionLocationFragment .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.jxust.tutor.appFragments.SessionLocationFragment -up-|> android.support.v4.app.Fragment
  com.jxust.tutor.appFragments.SessionLocationFragment o-- com.jxust.tutor.models.DBHelper : mydb


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
